--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.17.7
   firebase_storage: ^11.6.8
   flutter_svg: ^2.0.10+1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
